--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,49 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div id=" Student_In">
+        <form action="/submit" method="post">
+            <!-- Text Box -->
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Enter your name">
+    
+            <imput type=""></imput>
+            <br><br>
+    
+            <!-- Select Box -->
+            <label for="options">Choose an option:</label>
+            <select id="options" name="option">
+                <option value="CSE 115">CSE 115</option>
+                <option value="CSE 116">CSE 116</option>
+            </select>
+    
+            <br><br>
+    
+            <!-- Submit Button -->
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+    <div id="CSE116">
         <h1>
-            Hi {{name}}
+            CSE116
         </h1>
-        {{%start for loop %}}
-        {{}}
+        <ol>
+            <li>Hi</li>
+            <li>hello</li>
+            {% for item in items %}
+                <li>{{ item }}</li>
+            {% endfor %}
+        </ol>
+    </div>
+    <div id="CSE115">
+        <h1>
+            CSE115
+        </h1>
+        <ol>
+            {% for item in items %}
+                <li>{{ item }}</li>
+            {% endfor %}
+        </ol>
     </div>
 </body>
 </html>
