added more things

--- a/templates/TA.html
+++ b/templates/TA.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link rel="stylesheet" href="../static/style/TA.css">
     <script>
         function setFormAction(action) {
             // Set the hidden input field's value to indicate the action
@@ -31,7 +31,7 @@
             <br><br>
     
             <!-- Select Course Box -->
-            <label for="options">Choose an option:</label>
+            <label for="options">Course:</label>
             <select id="options" name="option">
                 <option value="CSE 115">CSE 115</option>
                 <option value="CSE 116">CSE 116</option>
