--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style/index.css">
+    <link rel="stylesheet" href="../static/style/index.css">
 </head>
 <body>
-    <div id=" Student_In">
+    <div id="Student_In">
         <form action="/signIn" method="post">    
             <!-- Text Box for UB ID -->
             <label for="UBID">UB ID:</label>
