--- a/templates/studentSignIn.html
+++ b/templates/studentSignIn.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../static/style/studentSignIn.css">
 </head>
 <body>
     <div id=" Student_In">
@@ -19,7 +20,7 @@
             <br><br>
     
             <!-- Select course Box -->
-            <label for="options">Choose an option:</label>
+            <label for="options">Course:</label>
             <select id="options" name="option">
                 <option value="CSE 115">CSE 115</option>
                 <option value="CSE 116">CSE 116</option>
