--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="../static/style/index.css">
 </head>
 <body>
+    <div>
+        <h1 class="header">UB CSE Office Hours</h1>
     <div id="Student_In">
+        <h1 class="header">Sign in</h1>
         <form action="/signIn" method="post">    
             <!-- Text Box for UB ID -->
             <label for="UBID">UB ID:</label>
@@ -23,5 +26,7 @@
 
         </form>
     </div>
+    </div>
+    
 </body>
 </html>
