--- a/templates/studentSignIn.html
+++ b/templates/studentSignIn.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="../static/style/studentSignIn.css">
 </head>
 <body>
+
     <div id=" Student_In">
+        <h1 class="header">Student Access</h1>
         <form action="/studentAdd" method="post">
             <!-- Text Box for name -->
             <label for="name">Name:</label>
@@ -22,8 +24,8 @@
             <!-- Select course Box -->
             <label for="options">Course:</label>
             <select id="options" name="option">
-                <option value="CSE 115">CSE 115</option>
-                <option value="CSE 116">CSE 116</option>
+                <option value="CSE115">CSE115</option>
+                <option value="CSE116">CSE116</option>
             </select>
     
             <br><br>
